updated at: 2020-02-08 18:26, 3Dモデル「たわわ胸Ver.2.11 Extra」【キッシュ素体専用】 - 空々神社社務所 - BOOTH

--- a/VRChat/02/1130602.html
+++ b/VRChat/02/1130602.html
@@ -77,31 +77,300 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div id="age-confirmation">
-          <div class="alert-headings">
-            <h1 class="u-tpg-title1 u-m-0">
-              年齢確認
-            </h1>
-            <h2 class="u-tpg-headline u-mt-500">
-              ここから先は、アダルト商品を取り扱うアダルトサイトとなります。<br>
-              18歳未満の方には不適切な表現内容（性描写・暴力的表現等）を含んでいるため、<br>
-              18歳未満の方のアクセスは固くお断りします。
-            </h2>
-          </div>
-          <h3 class="u-tpg-headline">
-            あなたは18歳以上ですか？
-          </h3>
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="kuukuukon" data-product-category="127"
+        data-product-id="1130602" data-product-list="market_show"
+        data-product-price="1200" data-tracking="detail_item">
           <nav>
-            <ul class="l-row u-m-0 u-justify-content-center">
-              <li class="js-approve-adult">
-                <a class="adult-check-nav" href="#">[はい]</a>
-              </li>
-              <li>
-                <a class="adult-check-nav" href=
-                "https://booth.pm/">[いいえ]</a>
-              </li>
-            </ul>
+            <div class="breadcrumbs u-border-b u-border-100">
+              <div class="container">
+                <div class="breadcrumb">
+                  <a class="label" data-tracking="click"
+                  data-product-list=
+                  "from market_show via breadcrumbs to category_index"
+                  href=
+                  "/ja/browse/%E7%B4%A0%E6%9D%90%E3%83%87%E3%83%BC%E3%82%BF">
+                  素材データ</a>
+                </div>
+                <div class="breadcrumb">
+                  <a class="label" data-tracking="click"
+                  data-product-list=
+                  "from market_show via breadcrumbs to category_index"
+                  href=
+                  "/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB">3Dモデル</a>
+                </div>
+              </div>
+            </div>
           </nav>
+          <article>
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
+              <div class=
+              "market-item-detail__exhibition-banner container">
+              </div>
+              <div class="u-bg-white u-pt-600 u-px-700">
+                <div class="container">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
+                      <header>
+                        <div class="u-my-200 u-tpg-title3">
+                          <a class="nav" target="_blank"
+                          data-product-list=
+                          "from market_show via market_item_detail to shop_index"
+                          data-tracking="click" rel="noopener"
+                          href="https://kuukuukon.booth.pm/">
+                          <div class=
+                          "u-d-flex u-align-items-center">
+                            <img alt="空々神社社務所" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/31c309e8-cf8f-4cfc-9495-5cbbe2f34f2c_base_resized.jpg">
+                            <div class="u-text-ellipsis">
+                              空々神社社務所
+                            </div>
+                          </div></a>
+                        </div>
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
+                          3Dモデル「たわわ胸Ver.2.11 Extra」【キッシュ素体専用】
+                        </h2>
+                        <div class="item-summary__caption"></div>
+                      </header>
+                      <section>
+                        <div class="wish-list-link">
+                          <a class="add-to-wish-list"
+                          data-tracking="add_to_wishlist"
+                          data-product-id="1130602"
+                          data-product-list=
+                          "from market_show via market_item_detail to add_to_wish_list"
+                          rel="nofollow" data-method="post" href=
+                          "https://booth.pm/items/1130602/wish_list">
+                          </a><a class="remove-from-wish-list"
+                          data-tracking="remove_from_wishlist"
+                          data-product-id="1130602"
+                          data-product-list=
+                          "from market_show via market_item_detail to remove_from_wish_list"
+                          data-remote="true" rel="nofollow"
+                          data-method="delete" href=
+                          "https://booth.pm/items/1130602/wish_list"></a>
+                        </div>
+                        <ul class="variations u-mt-300" id=
+                        "variations">
+                          <li class="variation-item">
+                            <div class="lo-grid lo-grid-top">
+                              <div class="variation-item-summary">
+                                <div class=
+                                "lo-grid u-align-items-center">
+                                  <div class="lo-grid-cell">
+                                    <div class=
+                                    "variation-caption variation-caption--type">
+                                      ダウンロード商品
+                                    </div>
+                                  </div>
+                                  <div class=
+                                  "variation-price u-text-right">
+                                    ¥ 1,200
+                                  </div>
+                                </div>
+                                <div class="variation-cart">
+                                  <div class="cart-button-wrap">
+                                    <form class="button_to" method=
+                                    "post" action=
+                                    "https://kuukuukon.booth.pm/cart?added_to_cart=true&amp;via=market">
+                                      <input type="hidden" name=
+                                      "_method" value=
+                                      "patch"><button class=
+                                      "btn add-cart full-length"
+                                      data-product-id="1130602"
+                                      data-product-price="1200"
+                                      data-product-brand=
+                                      "kuukuukon"
+                                      data-product-category="127"
+                                      data-product-variant=
+                                      "1756464" data-tracking=
+                                      "add_item" data-product-list=
+                                      "from market_show via market to add_item"
+                                      type="submit"><input type=
+                                      "hidden" name=
+                                      "cart_item[variation_id]" id=
+                                      "cart_item_variation_id"
+                                      value="1756464"></button>
+                                      <div class="cmd-label">
+                                        <button class=
+                                        "btn add-cart full-length"
+                                        data-product-id="1130602"
+                                        data-product-price="1200"
+                                        data-product-brand=
+                                        "kuukuukon"
+                                        data-product-category="127"
+                                        data-product-variant=
+                                        "1756464" data-tracking=
+                                        "add_item"
+                                        data-product-list=
+                                        "from market_show via market to add_item"
+                                        type=
+                                        "submit">カートに入れる</button>
+                                      </div>
+                                    </form>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                        </ul>
+                      </section>
+                      <section>
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1130602"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "3Dモデル「たわわ胸Ver.2.11 Extra」【キッシュ素体専用】 | 空々神社社務所"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
+                            <div class="fb-like" data-action="like"
+                            data-href=
+                            "https://booth.pm/ja/items/1130602"
+                            data-layout="button_count" data-share=
+                            "false" data-show-faces="false"></div>
+                          </div>
+                        </div>
+                      </section>
+                    </div>
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
+                      <div class="primary-image-area">
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "3Dモデル「たわわ胸Ver.2.11 Extra」【キッシュ素体専用】"
+                            class="market-item-detail-item-image"
+                            src=
+                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1130602/86b724fd-0777-4e7d-a005-eb9cd9db36f3_base_resized.jpg">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="primary-image-thumbnails">
+                        <a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1130602/86b724fd-0777-4e7d-a005-eb9cd9db36f3_base_resized.jpg">
+                        </div></a>
+                      </div>
+                      <section>
+                        <div class=
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
+                            ●更新
+                            2019/06/27：Ver.2に更新しました。Ver.1.x購入者はそのままDLできます。ダウンロードページにて旧Ver.1.xもダウンロードできます。また、チョコテクスチャーはVer.1.xに同梱しました。
+                            2019/07/06：Ver.2.10に更新。DynamicBoneコライダーのために胸Boneの形状調整。コライダーで胸を触りやすくなった。
+                            2019/07/14：Ver.2.11：ペイントソフトのGIMP2最新版だと同梱PSDファイルが壊れるので、GIMP２用のファイルxcfを同梱。
+                            ●サンプル動画
+                            https://twitter.com/KuuKuuKon/status/1147384577532366848
+                            ●概要 むた様制作の「キッシュ用素体」
+                            https://booth.pm/ja/items/1026956
+                            を、たわわな胸に改造する3DキットのExtra版です。
+                            （キッシュ用素体は、キッシュ以外へのアバターへも使用できます。解説有り）
+                            Blender等の実装作業が必要になりますが、 全工程の解説書が付いています。
+                            ～Ver.2の要素～
+                            ・本たわわ胸のUVを、キッシュ用素体のUVの胸部のつなぎ目と完全一致させました。
+                            ・そのため、１つのマテリアル、１つのテクスチャーで完結します。
+                            ・素のn_body.pngやn_body_1.pngがそのまま使用できます（同梱はしてません）
+                            ・そのままでも使用できますが、たわわ胸の影等を書き込んだ合成用テクスチャーを同梱。
+                            ・ポリゴン数、ふんだんに１万も使い込んだやらわか曲線 ～Extra版の要素～
+                            ・胸先の表現 　シェイプキーにより、高さ、太さ、輪のサイズ等の調整ができます。
+                            　また、合成用テクスチャーに胸先の描画が追加されます。 ※注意点１
+                            本ページで販売しているものは「Extra」版であり、「無料付属」版の上位品となります。
+                            「無料付属版」は本ショップで販売しているキッシュ素体用の衣装商品にセットでついてくるたわわ胸データです。
+                            「無料付属」版には胸先の表現がありません。 ※注意点２
+                            たわわ胸Ver.1とはボーンやウェイトが異なるため、
+                            既存のVer.1.x用衣装とは互換性はありません。タブン無理。
+                            (空々巫女服、タートルネックセーター、エプロンなどがVer.1胸)
+                            ●実装解説書
+                            https://docs.google.com/document/d/1VUAnL8OjvwpA-TzdY4hXch7t_tp97mYhtoQpMe-EXkk/edit?usp=sharing
+                            ●利用規約　A型
+                            https://docs.google.com/document/d/1fJEAowWZHvnp5NHfaBhf7gcKE0zFqvASNERnqnvWgsY/edit?usp=sharing
+                            上記の利用規約をよくお読みください。 購入した時点で同意したものとみなします。
+                            ※たわわ胸対応衣装製作について
+                            本たわわ胸を基準にした衣装を制作・販売をしても問題ありません。
+                            ただしたわわ胸の同梱は本利用規約A型に反するので不可。 ●付属データ
+                            [Extra版]
+                            ・TWWBreastVer2_Extra.fbx　たわわ胸３Dデータ
+                            ・n_bodyForTwwV2_Extra.psd　合成用テクスチャ。PSD用
+                            ・n_bodyForTwwV2_Extra.clip　同上。クリスタ用。n_body.pngと合成する
+                            ・n_bodyForTwwV2_Extra.xcf　同上。GIMP2用。n_body.pngと合成する。GIMP2にPSD読み込ませると壊れる。
+                            ・n_bodyForTwwV2_Mask.png　胸先表現の補助Mask。
+                            ・Matcap_Rubber1.png
+                            Maskと組み合わせて使うMatcap。
+                            ・頂点削除ガイド.fbx　実装作業を補助するガイドマーカー。必須ではない。
+                          </p>
+                        </div>
+                      </section>
+                      <section>
+                        <div class="u-text-wrap page_design" id=
+                        "modules"></div>
+                      </section>
+                    </div>
+                  </div>
+                </div>
+                <section class="container">
+                  <div class="market-item-detail-tag-section">
+                    <div class="mobile-section">
+                      <h3 class="sectionhead">
+                        タグ
+                      </h3>
+                    </div>
+                    <div class="search-guide-nav">
+                      <div class="search-guide-slider-wrapper">
+                        <div class="search-guide-slider">
+                          <div class=
+                          "search-guide-slider-container">
+                            <a class="search-guide-tablet"
+                            data-tracking="click"
+                            data-product-list="from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/3D%E3%83%A2%E3%83%87%E3%83%AB">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                3Dモデル
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%82%AD%E3%83%83%E3%82%B7%E3%83%A5%E3%81%A1%E3%82%83%E3%82%93%E5%AF%BE%E5%BF%9C">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                キッシュちゃん対応
+                              </div>
+                            </div></a>
+                          </div>
+                        </div><a class=
+                        "search-guide-slider-nav right"></a><a class="search-guide-slider-nav left"></a>
+                      </div>
+                    </div>
+                    <div class="mobile-section">
+                      <div class="market-item-detail-search-link">
+                        <a class="btn negative" data-tracking=
+                        "click" data-product-list=
+                        "from market_show via tag_category_search to search_index"
+                        href=
+                        "https://booth.pm/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB?q=3D%E3%83%A2%E3%83%87%E3%83%AB">
+                        <div class="search-label">
+                          3Dモデル x 3Dモデル で検索
+                        </div></a>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+          </article>
         </div>
       </main>
     </div>
