updated at: 2020-02-08 18:43, VRChat&amp;UnityModel 『うかく(UKAKU)』 - [ Orange Blossom ] shop - BOOTH

--- a/VRChat/49/1121449.html
+++ b/VRChat/49/1121449.html
@@ -7,7 +7,7 @@
       - BOOTH
     </title>
     <meta name="description" content=
-    "バーチャルマーケット2参加してます。スペースはA-E03です。 本モデルは主にVRChatでの使用を目的とした3Dアバターです。 内容は 女の子キャラクター『うかく』 と なんかごっつい武器 のセットとなっています。 データ形式はunitypackageです。Unityのバージョンは5.6.3p1をお使いください。 ※本作品の収益はpfyがピザとカレーを食べる資金として運用されます。ご了承ください。 2019/03/30 VRM版うかくをupしました。VRM LiveViewerで見るうかく可愛すぎなんだけど…？ 2019/03/10">
+    "本モデルは主にVRChatでの使用を目的とした3Dアバターです。 内容は 女の子キャラクター『うかく』 と なんかごっつい武器 のセットとなっています。 データ形式はunitypackageです。※Unity 2017.4.28f1での動作確認済み。 ※本作品の収益はpfyがピザとカレーを食べる資金として運用されます。ご了承ください。 2019/03/30 VRM版うかくをupしました。VRM LiveViewerで見るうかく可愛すぎなんだけど…？ 2019/03/10 うかくを購入してくださった方々向けに、バーチャルマーケット出店時のブースをわりとそのままupしました。 2019/01/26">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1121449">
@@ -16,14 +16,14 @@
     <meta name="twitter:title" content=
     "VRChat&amp;UnityModel 『うかく(UKAKU)』 - [ Orange Blossom ] shop - BOOTH">
     <meta name="twitter:description" content=
-    "バーチャルマーケット2参加してます。スペースはA-E03です。 本モデルは主にVRChatでの使用を目的とした3Dアバターです。 内容は 女の子キャラクター『うかく』 と なんかごっつい武器 のセットとなっています。 データ形式はunitypackageです。Unityのバージョンは5.6.3p1をお使いください。 ※本作品の収益はpfyがピザとカレーを食べる資金として運用されます。ご了承ください。 2019/03/30 VRM版うかくをupしました。VRM LiveViewerで見るうかく可愛すぎなんだけど…？ 2019/03/10">
+    "本モデルは主にVRChatでの使用を目的とした3Dアバターです。 内容は 女の子キャラクター『うかく』 と なんかごっつい武器 のセットとなっています。 データ形式はunitypackageです。※Unity 2017.4.28f1での動作確認済み。 ※本作品の収益はpfyがピザとカレーを食べる資金として運用されます。ご了承ください。 2019/03/30 VRM版うかくをupしました。VRM LiveViewerで見るうかく可愛すぎなんだけど…？ 2019/03/10 うかくを購入してくださった方々向けに、バーチャルマーケット出店時のブースをわりとそのままupしました。 2019/01/26">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/4d3a02c5-cd49-49c9-84f0-32ec15541fb7/i/1121449/ab211ca1-1bb2-40cb-927b-cfc0d79d8fd0_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRChat&amp;UnityModel 『うかく(UKAKU)』 - [ Orange Blossom ] shop - BOOTH">
     <meta property="og:description" content=
-    "バーチャルマーケット2参加してます。スペースはA-E03です。 本モデルは主にVRChatでの使用を目的とした3Dアバターです。 内容は 女の子キャラクター『うかく』 と なんかごっつい武器 のセットとなっています。 データ形式はunitypackageです。Unityのバージョンは5.6.3p1をお使いください。 ※本作品の収益はpfyがピザとカレーを食べる資金として運用されます。ご了承ください。 2019/03/30 VRM版うかくをupしました。VRM LiveViewerで見るうかく可愛すぎなんだけど…？ 2019/03/10">
+    "本モデルは主にVRChatでの使用を目的とした3Dアバターです。 内容は 女の子キャラクター『うかく』 と なんかごっつい武器 のセットとなっています。 データ形式はunitypackageです。※Unity 2017.4.28f1での動作確認済み。 ※本作品の収益はpfyがピザとカレーを食べる資金として運用されます。ご了承ください。 2019/03/30 VRM版うかくをupしました。VRM LiveViewerで見るうかく可愛すぎなんだけど…？ 2019/03/10 うかくを購入してくださった方々向けに、バーチャルマーケット出店時のブースをわりとそのままupしました。 2019/01/26">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/4d3a02c5-cd49-49c9-84f0-32ec15541fb7/i/1121449/ab211ca1-1bb2-40cb-927b-cfc0d79d8fd0_base_resized.jpg">
     <meta property="og:url" content=
@@ -330,10 +330,10 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            バーチャルマーケット2参加してます。スペースはA-E03です。
                             本モデルは主にVRChatでの使用を目的とした3Dアバターです。 内容は
                             女の子キャラクター『うかく』 と なんかごっつい武器 のセットとなっています。
-                            データ形式はunitypackageです。Unityのバージョンは5.6.3p1をお使いください。
+                            データ形式はunitypackageです。※Unity
+                            2017.4.28f1での動作確認済み。
                             ※本作品の収益はpfyがピザとカレーを食べる資金として運用されます。ご了承ください。
                             2019/03/30 VRM版うかくをupしました。VRM
                             LiveViewerで見るうかく可愛すぎなんだけど…？ 2019/03/10
