--- a/VRChat/00/1093800.html
+++ b/VRChat/00/1093800.html
@@ -6,7 +6,7 @@
       おもちゃのぐるかないふ - あっとまーく人形館 - BOOTH
     </title>
     <meta name="description" content=
-    "おもちゃだから刃引きしてるよ！△885ポリ ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/11/16より適用 オリジナル3Dモデル『おもちゃのぐるかないふ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『おもちゃのぐるかないふ』をDLいただき誠にありがとうございます。 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。 本規約に記載のない事項に関しては原則禁止事項にあたるものとします。">
+    "おもちゃだから刃引きしてるよ！△885ポリ ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/11/16より適用（※１　2020/02/09第一回改訂） オリジナル3Dモデル『おもちゃのぐるかないふ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『おもちゃのぐるかないふ』をDLいただき誠にありがとうございます。 （※１） 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1093800">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "おもちゃのぐるかないふ - あっとまーく人形館 - BOOTH">
     <meta name="twitter:description" content=
-    "おもちゃだから刃引きしてるよ！△885ポリ ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/11/16より適用 オリジナル3Dモデル『おもちゃのぐるかないふ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『おもちゃのぐるかないふ』をDLいただき誠にありがとうございます。 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。 本規約に記載のない事項に関しては原則禁止事項にあたるものとします。">
+    "おもちゃだから刃引きしてるよ！△885ポリ ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/11/16より適用（※１　2020/02/09第一回改訂） オリジナル3Dモデル『おもちゃのぐるかないふ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『おもちゃのぐるかないふ』をDLいただき誠にありがとうございます。 （※１） 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/85a4d81c-3198-4c7e-a345-4f260cd00a05/i/1093800/8293c390-9e27-4ec4-af64-026db1712236_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "おもちゃのぐるかないふ - あっとまーく人形館 - BOOTH">
     <meta property="og:description" content=
-    "おもちゃだから刃引きしてるよ！△885ポリ ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/11/16より適用 オリジナル3Dモデル『おもちゃのぐるかないふ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『おもちゃのぐるかないふ』をDLいただき誠にありがとうございます。 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。 本規約に記載のない事項に関しては原則禁止事項にあたるものとします。">
+    "おもちゃだから刃引きしてるよ！△885ポリ ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/11/16より適用（※１　2020/02/09第一回改訂） オリジナル3Dモデル『おもちゃのぐるかないふ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『おもちゃのぐるかないふ』をDLいただき誠にありがとうございます。 （※１） 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/85a4d81c-3198-4c7e-a345-4f260cd00a05/i/1093800/8293c390-9e27-4ec4-af64-026db1712236_base_resized.jpg">
     <meta property="og:url" content=
@@ -195,6 +195,28 @@
                                       <div>
                                         &nbsp;(98.6 KB)
                                       </div>
+                                    </div></a><a class=
+                                    "btn add-cart full-length"
+                                    title=
+                                    "Thank_you_for_reading___Latest_edition_09_02_2020_.zip"
+                                    href=
+                                    "https://booth.pm/downloadables/895031">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        Thank_you_for_reading___Latest_edition_09_02_2020_
+                                      </div>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(3.82 KB)
+                                      </div>
                                     </div></a>
                                   </div>
                                 </div>
@@ -247,14 +269,18 @@
                           <p class="autolink u-text-wrap">
                             おもちゃだから刃引きしてるよ！△885ポリ
                             ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語]
-                            利用規約　2018/11/16より適用
+                            利用規約　2018/11/16より適用（※１　2020/02/09第一回改訂）
                             オリジナル3Dモデル『おもちゃのぐるかないふ』ver.1.00
                             製作者：あっと　（twitterID:@aaattttttooo）
                             あっと式オリジナル3Dモデル『おもちゃのぐるかないふ』をDLいただき誠にありがとうございます。
+                            （※１）
                             本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。
                             本規約は変更することがあり、最新のものを適用するものとします。
-                            本規約に記載のない事項に関しては原則禁止事項にあたるものとします。 〇禁止事項
-                            本ファイルの内容物の全てまたは一部を含んだものを
+                            本規約に記載のない事項に関しては原則禁止事項にあたるものとします。
+                            なお、本モデルが製作者であるあっと（twitterID:@aaattttttooo）以外の名のもとに有料もしくは無料で販売されていた場合、
+                            その販売者は本モデルの製作者であるあっと（twitterID:@aaattttttooo）の著作権を侵害しています。
+                            貴方の大事なお金が違法行為の犠牲にならないようにご注意ください。））
+                            〇禁止事項 本ファイルの内容物の全てまたは一部を含んだものを
                             ・複製して第三者への販売・譲渡・貸与・配布等を行うこと
                             ・流用(コピー等)して類似の製品や出版物を製造、販売すること
                             ・二次配布や第三者が利用できる状態にする行為
@@ -268,8 +294,10 @@
                             ・製作者を偽る行為 ・製作者名乗る行為 ・製作者を書き換える行為
                             ・特定個人・団体・宗教・政治・組織への誹謗中傷のための利用 を禁止します。
                             ※守っていただけると私が笑顔になります。守っていただけないと私がひどく悲しみます。
-                            〇認可事項 本ファイルの内容物の全てまたは一部を含んだものを用いて
-                            ・アバターとしての使用が可能なサービスへ利用すること （例：VRChat）
+                            〇認可事項（※１）
+                            禁止事項に当たらない範囲において、本ファイルの内容物の全てまたは一部を含んだものを用いて
+                            ・SocialVRにおいて、自分だけが使えるアバターとして使用すること
+                            ・SocialVRにおいて、ワールドをつくるアセットとして利用すること
                             ・動画配信を行うこと ・VirtualYoutuberとして活動すること
                             以上を認めます。
                             また、禁止事項に違反しない範囲において、本ファイル内の3Dモデルの改変を認めます。
@@ -283,32 +311,41 @@
                             ・利用者やその他の第三者に発生した機会逸失、業務の中断その他いかなる損害(間接損害や逸失利益を含む)に対して、制作者が係る損害の可能性を事前に通知されていた場合であっても、制作者は一切の責任を負いません。
                             ・本ファイルの内容物とこれを利用した改変データの著作権は大元の製作者である　あっと（twitterID:@aaattttttooo）　が有するものとします。
                             ・本規約内の日本語版と英語版で意味の齟齬がある場合、日本語版の規約内容を適用します。
-                            ※本ファイルの解凍用パスワードは「habikishiteruyo」です。
                             [English] Terms of service. Applied
-                            from 16/11/2018 Original 3D model
+                            from 16/11/2018（※１　09/02/2020　Once
+                            revised） Original 3D model
                             "おもちゃのぐるかないふ" ver.1.00 Producer: あっと
                             (twitterID: @ aaattttttooo) Thank you
                             very much for downloading the original
-                            3D model "おもちゃのぐるかないふ". You agree to
-                            these Terms of Use at the time you
+                            3D model "おもちゃのぐるかないふ". （※１） You agree
+                            to these Terms of Use at the time you
                             purchase or download this model. These
                             Terms may be subject to change and the
                             latest ones shall be applied. Regarding
                             matters not stated in this contract, in
-                            principle, it is a prohibited matter. ○
-                            Prohibited matter For those containing
-                            all or part of the contents of this
-                            file, · Act of conducting sales,
-                            transfer, loan, distribution, etc. to a
-                            third party by d uplicating this
-                            content. · Act by diverting (copying,
-                            etc.) all or a part of the material of
-                            this content to manufacture and selling
-                            similar products and publications. ·
-                            Other secondary distribution and acts
-                            to make it available to third parties
-                            (Example: Distribution of avatar to
-                            third party using pedestal in VRChat) ·
+                            principle, it is a prohibited matter.
+                            If this model was sold under a name
+                            other than the creator Atto (twitterID:
+                            @aaattttttooo) for a fee or free of
+                            charge, The seller infringes the
+                            copyright of あっと (twitterID:
+                            @aaattttttooo) who is the creator of
+                            this model. Please be careful not to
+                            sacrifice your important money for
+                            illegal activity.）） ○ Prohibited matter
+                            For those containing all or part of the
+                            contents of this file, · Act of
+                            conducting sales, transfer, loan,
+                            distribution, etc. to a third party by
+                            d uplicating this content. · Act by
+                            diverting (copying, etc.) all or a part
+                            of the material of this content to
+                            manufacture and selling similar
+                            products and publications. · Other
+                            secondary distribution and acts to make
+                            it available to third parties (Example:
+                            Distribution of avatar to third party
+                            using pedestal in VRChat) ·
                             Registration acts such as trademark
                             registration, design registration, etc.
                             usin g this content. · Various
@@ -335,23 +372,26 @@
                             We will prohibit the above. * When you
                             observe the rules, I will smile. I will
                             be very sad if you do not keep the
-                            rules. ○ Authorization Using contents
+                            rules. ○ Authorization（※１） To the
+                            extent that it does not fall under
+                            prohibited matters,using contents
                             including all or part of contents of
-                            this file · Use it for services that
-                            can be used as avatars (Example:
-                            VRChat) · To distribute video · Act as
+                            this file · Use as an avatar that only
+                            you can use in SocialVR · Use as an
+                            asset to create a world in SocialVR ·
+                            To distribute video · Act as
                             VirtualYoutuber I acknowledge the
-                            above. In addition, we will allow
-                            modification of the 3D model in this
-                            file to the extent that it does not
-                            violate the prohibited matter. 〇 Other
-                            · Producers are not responsible for any
-                            inconvenience, disadvantage, loss or
-                            trouble caused by using the contents of
-                            this file containing all or part of the
-                            contents. · The content creator does
-                            not concern at all with regard to the
-                            user's PC usage environment and assumes
+                            above. Also, modification of the 3D
+                            model in this file is permitted as long
+                            as it does not violate the prohibited
+                            items. 〇 Other · Producers are not
+                            responsible for any inconvenience,
+                            disadvantage, loss or trouble caused by
+                            using the contents of this file
+                            containing all or part of the contents.
+                            · The content creator does not concern
+                            at all with regard to the user's PC
+                            usage environment and assumes
                             absolutely no responsibility. · The
                             content creator assumes no
                             responsibility for any damage caused by
@@ -366,7 +406,7 @@
                             the user due to the use of this
                             material. · Content creator shall not
                             be liable for any damages caused by the
-                            use of this content. · · In the event
+                            use of this content. · In the event
                             that the producer has been notified in
                             advance of the possibility of such
                             damage to the user or other third party
@@ -382,9 +422,7 @@
                             discrepancy in meaning between the
                             Japanese version and the English
                             version within this policy, the content
-                            of the Japanese version is applied. ※
-                            The decompressing password of this file
-                            is "habikishiteruyo".
+                            of the Japanese version is applied.
                           </p>
                         </div>
                       </section>
