updated at: 2020-02-08 19:25, あっと式オリジナル３Dアバター『サヤカ』 - あっとまーく人形館 - BOOTH

--- a/VRChat/64/1080564.html
+++ b/VRChat/64/1080564.html
@@ -311,18 +311,17 @@
                             　・利用規約に違反しない範囲での改変可
                             ---------------------------
                             ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語]
-                            利用規約　2018/11/05より適用(※１　同日第一回改訂)（※２　2019/01/19第二回改訂）
-                            オリジナル3Dモデル『サヤカ』ver.1.24
+                            利用規約　2018/11/05より適用(※１　同日第一回改訂)（※２　2019/01/19第二回改訂）（※３　2020/02/09
+                            第三回改訂） オリジナル3Dモデル『サヤカ』ver.1.24
                             製作者：あっと　（twitterID:@aaattttttooo）
                             あっと式オリジナル3Dモデル『サヤカ』をDLいただき誠にありがとうございます。
                             本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。
                             本規約は変更することがあり、最新のものを適用するものとします。
                             本規約に記載のない事項に関しては原則禁止事項にあたるものとします。
-                            （※２　なお、本モデルはbooth(https://minnakinoko.booth.pm/)でのみ無料販売しています。
-                            仮に、他の販売サイトで本モデルが有料もしくは無料で販売されていた場合、
+                            （※２（※３　なお、本モデルが製作者であるあっと（twitterID:@aaattttttooo）以外の名のもとに有料もしくは無料で販売されていた場合、
                             その販売者は本モデルの製作者であるあっと（twitterID:@aaattttttooo）の著作権を侵害しています。
-                            貴方の大事なお金が違法行為の犠牲にならないようにご注意ください。） 〇禁止事項
-                            本ファイルの内容物の全てまたは一部を含んだものを
+                            貴方の大事なお金が違法行為の犠牲にならないようにご注意ください。））
+                            〇禁止事項 本ファイルの内容物の全てまたは一部を含んだものを
                             ・複製して第三者への販売・譲渡・貸与・配布等を行うこと
                             ・流用(コピー等)して類似の製品や出版物を製造、販売すること
                             ・二次配布や第三者が利用できる状態にする行為
@@ -336,8 +335,10 @@
                             ・製作者を偽る行為 ・製作者名乗る行為 ・製作者を書き換える行為
                             ・特定個人・団体・宗教・政治・組織への誹謗中傷のための利用 を禁止します。
                             ※守っていただけると私が笑顔になります。守っていただけないと私がひどく悲しみます。
-                            〇認可事項 本ファイルの内容物の全てまたは一部を含んだものを用いて
-                            ・アバターとしての使用が可能なサービスへ利用すること （例：VRChat）
+                            〇認可事項
+                            禁止事項に当たらない範囲において、本ファイルの内容物の全てまたは一部を含んだものを用いて
+                            ・SocialVRにおいて、自分だけが使えるアバターとして使用すること
+                            ・SocialVRにおいて、ワールドをつくるアセットとして利用すること
                             ・動画配信を行うこと ・VirtualYoutuberとして活動すること
                             以上を認めます。
                             また、禁止事項に違反しない範囲において、本ファイル内の3Dモデルの改変を認めます。（※１）
