updated at: 2020-02-08 19:38, あっときのこ - あっとまーく人形館 - BOOTH

--- a/VRChat/30/1070230.html
+++ b/VRChat/30/1070230.html
@@ -6,7 +6,7 @@
       あっときのこ - あっとまーく人形館 - BOOTH
     </title>
     <meta name="description" content=
-    "おうちの庭にきのこが生えました。 たくさん採れたからおすそ分け。 △400 ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/10/28より適用 オリジナル3Dモデル『あっときのこ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『あっときのこ』をDLいただき誠にありがとうございます。 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。">
+    "おうちの庭にきのこが生えました。 たくさん採れたからおすそ分け。 △400 ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/10/28より適用（※1　2020/02/09第一回改訂） オリジナル3Dモデル『あっときのこ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『あっときのこ』をDLいただき誠にありがとうございます。 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1070230">
@@ -15,13 +15,13 @@
     <meta name="twitter:title" content=
     "あっときのこ - あっとまーく人形館 - BOOTH">
     <meta name="twitter:description" content=
-    "おうちの庭にきのこが生えました。 たくさん採れたからおすそ分け。 △400 ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/10/28より適用 オリジナル3Dモデル『あっときのこ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『あっときのこ』をDLいただき誠にありがとうございます。 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。">
+    "おうちの庭にきのこが生えました。 たくさん採れたからおすそ分け。 △400 ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/10/28より適用（※1　2020/02/09第一回改訂） オリジナル3Dモデル『あっときのこ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『あっときのこ』をDLいただき誠にありがとうございます。 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/85a4d81c-3198-4c7e-a345-4f260cd00a05/i/1070230/11946497-3684-47b8-b38f-02bd6d3326db_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="あっときのこ - あっとまーく人形館 - BOOTH">
     <meta property="og:description" content=
-    "おうちの庭にきのこが生えました。 たくさん採れたからおすそ分け。 △400 ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/10/28より適用 オリジナル3Dモデル『あっときのこ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『あっときのこ』をDLいただき誠にありがとうございます。 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。">
+    "おうちの庭にきのこが生えました。 たくさん採れたからおすそ分け。 △400 ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語] 利用規約　2018/10/28より適用（※1　2020/02/09第一回改訂） オリジナル3Dモデル『あっときのこ』ver.1.00 製作者：あっと　（twitterID:@aaattttttooo） あっと式オリジナル3Dモデル『あっときのこ』をDLいただき誠にありがとうございます。 本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。 本規約は変更することがあり、最新のものを適用するものとします。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/85a4d81c-3198-4c7e-a345-4f260cd00a05/i/1070230/11946497-3684-47b8-b38f-02bd6d3326db_base_resized.jpg">
     <meta property="og:url" content=
@@ -274,7 +274,7 @@
                           <p class="autolink u-text-wrap">
                             おうちの庭にきのこが生えました。 たくさん採れたからおすそ分け。 △400
                             ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語]
-                            利用規約　2018/10/28より適用
+                            利用規約　2018/10/28より適用（※1　2020/02/09第一回改訂）
                             オリジナル3Dモデル『あっときのこ』ver.1.00
                             製作者：あっと　（twitterID:@aaattttttooo）
                             あっと式オリジナル3Dモデル『あっときのこ』をDLいただき誠にありがとうございます。
@@ -295,10 +295,14 @@
                             ・製作者を偽る行為 ・製作者名乗る行為 ・製作者を書き換える行為
                             ・特定個人・団体・宗教・政治・組織への誹謗中傷のための利用 を禁止します。
                             ※守っていただけると私が笑顔になります。守っていただけないと私がひどく悲しみます。
-                            〇認可事項 本ファイルの内容物の全てまたは一部を含んだものを用いて
-                            ・アバターとしての使用が可能なサービスへ利用すること （例：VRChat）
+                            〇認可事項（※１）
+                            禁止事項に当たらない範囲において、本ファイルの内容物の全てまたは一部を含んだものを用いて
+                            ・SocialVRにおいて、自分だけが使えるアバターとして使用すること
+                            ・SocialVRにおいて、ワールドをつくるアセットとして利用すること
                             ・動画配信を行うこと ・VirtualYoutuberとして活動すること
-                            以上を認めます。 〇そのほか
+                            以上を認めます。
+                            また、禁止事項に違反しない範囲において、本ファイル内の3Dモデルの改変を認めます。
+                            〇そのほか
                             ・本ファイルの内容物の全てまたは一部を含んだものを使用したことにより生じた何らかの不都合・不利益・損失・トラブルに対して製作者は一切責任を負わないものとします。
                             ・制作者は、利用者のPC利用環境について一切関与せず、また一切の責任を負いません。
                             ・制作者は、本件素材の内容変更、販売終了によって生じたいかなる損害についても、一切責任を負いません。
@@ -310,30 +314,31 @@
                             ・本規約内の日本語版と英語版で意味の齟齬がある場合、日本語版の規約内容を適用します。
                             ※本ファイルの解凍用パスワードは「みんなきのこになる」です。
                             [English] Terms of service. Applied
-                            from 28/10/2018 Original 3D model
-                            "あっときのこ" ver.1.00 Producer: あっと
-                            (twitterID: @ aaattttttooo) Thank you
-                            very much for downloading the original
-                            3D model "あっときのこ". You agree to these
-                            Terms of Use at the time you purchase
-                            or download this model. These Terms may
-                            be subject to change and the latest
-                            ones shall be applied. Regarding
-                            matters not stated in this contract, in
-                            principle, it is a prohibited matter. ○
-                            Prohibited matter For those containing
-                            all or part of the contents of this
-                            file, · Act of conducting sales,
-                            transfer, loan, distribution, etc. to a
-                            third party by d uplicating this
-                            content. · Act by diverting (copying,
-                            etc.) all or a part of the material of
-                            this content to manufacture and selling
-                            similar products and publications. ·
-                            Other secondary distribution and acts
-                            to make it available to third parties
-                            (Example: Distribution of avatar to
-                            third party using pedestal in VRChat) ·
+                            from 28/10/2018（※１ 09/02/2020　Once
+                            revised） Original 3D model "あっときのこ"
+                            ver.1.00 Producer: あっと (twitterID: @
+                            aaattttttooo) Thank you very much for
+                            downloading the original 3D model
+                            "あっときのこ". You agree to these Terms of
+                            Use at the time you purchase or
+                            download this model. These Terms may be
+                            subject to change and the latest ones
+                            shall be applied. Regarding matters not
+                            stated in this contract, in principle,
+                            it is a prohibited matter. ○ Prohibited
+                            matter For those containing all or part
+                            of the contents of this file, · Act of
+                            conducting sales, transfer, loan,
+                            distribution, etc. to a third party by
+                            d uplicating this content. · Act by
+                            diverting (copying, etc.) all or a part
+                            of the material of this content to
+                            manufacture and selling similar
+                            products and publications. · Other
+                            secondary distribution and acts to make
+                            it available to third parties (Example:
+                            Distribution of avatar to third party
+                            using pedestal in VRChat) ·
                             Registration acts such as trademark
                             registration, design registration, etc.
                             usin g this content. · Various
@@ -360,13 +365,19 @@
                             We will prohibit the above. * When you
                             observe the rules, I will smile. I will
                             be very sad if you do not keep the
-                            rules. ○ Authorization Using contents
+                            rules. ○ Authorization（※１） To the
+                            extent that it does not fall under
+                            prohibited matters,using contents
                             including all or part of contents of
-                            this file · Use it for services that
-                            can be used as avatars (Example:
-                            VRChat) · To distribute video · Act as
+                            this file · Use as an avatar that only
+                            you can use in SocialVR · Use as an
+                            asset to create a world in SocialVR ·
+                            To distribute video · Act as
                             VirtualYoutuber I acknowledge the
-                            above. 〇 Other · Producers are not
+                            above. Also, modification of the 3D
+                            model in this file is permitted as long
+                            as it does not violate the prohibited
+                            items. 〇 Other · Producers are not
                             responsible for any inconvenience,
                             disadvantage, loss or trouble caused by
                             using the contents of this file
