--- a/VRChat/56/1211956.html
+++ b/VRChat/56/1211956.html
@@ -6,7 +6,7 @@
       鬼面 - 和飾ノ助屋 - BOOTH
     </title>
     <meta name="description" content=
-    "主にVRchatでの利用を想定した 鬼面4色の3Dモデルとなります。 【ポリゴン数】 ･1002 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用psdファイル ※同梱モデルにはUnlit/TextureのShaderを使用しています。 CubedParadoxs/Flat Lit Toonを利用される場合は Cubeds-Unity-Shadersを導入して選択してください。 【Cubeds-Unity-Shadersの導入方法】 http://vrchatjp.playing.wiki/d/Cubeds-Unity-Shaders 【利用にあたって】">
+    "主にVRchatでの利用を想定した 鬼面4色の3Dモデルとなります。 【ポリゴン数】 ･1002 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用psdファイル ※同梱モデルにはUnlit/TextureのShaderを使用しています。 CubedParadoxs/Flat Lit Toonを利用される場合は Cubeds-Unity-Shadersを導入して選択してください。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1211956">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="鬼面 - 和飾ノ助屋 - BOOTH">
     <meta name="twitter:description" content=
-    "主にVRchatでの利用を想定した 鬼面4色の3Dモデルとなります。 【ポリゴン数】 ･1002 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用psdファイル ※同梱モデルにはUnlit/TextureのShaderを使用しています。 CubedParadoxs/Flat Lit Toonを利用される場合は Cubeds-Unity-Shadersを導入して選択してください。 【Cubeds-Unity-Shadersの導入方法】 http://vrchatjp.playing.wiki/d/Cubeds-Unity-Shaders 【利用にあたって】">
+    "主にVRchatでの利用を想定した 鬼面4色の3Dモデルとなります。 【ポリゴン数】 ･1002 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用psdファイル ※同梱モデルにはUnlit/TextureのShaderを使用しています。 CubedParadoxs/Flat Lit Toonを利用される場合は Cubeds-Unity-Shadersを導入して選択してください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1211956/58822eeb-1ce3-430b-b68d-ea0e6b199acb_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="鬼面 - 和飾ノ助屋 - BOOTH">
     <meta property="og:description" content=
-    "主にVRchatでの利用を想定した 鬼面4色の3Dモデルとなります。 【ポリゴン数】 ･1002 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用psdファイル ※同梱モデルにはUnlit/TextureのShaderを使用しています。 CubedParadoxs/Flat Lit Toonを利用される場合は Cubeds-Unity-Shadersを導入して選択してください。 【Cubeds-Unity-Shadersの導入方法】 http://vrchatjp.playing.wiki/d/Cubeds-Unity-Shaders 【利用にあたって】">
+    "主にVRchatでの利用を想定した 鬼面4色の3Dモデルとなります。 【ポリゴン数】 ･1002 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用psdファイル ※同梱モデルにはUnlit/TextureのShaderを使用しています。 CubedParadoxs/Flat Lit Toonを利用される場合は Cubeds-Unity-Shadersを導入して選択してください。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1211956/58822eeb-1ce3-430b-b68d-ea0e6b199acb_base_resized.jpg">
     <meta property="og:url" content=
@@ -112,18 +112,6 @@
                   <div class="u-d-flex">
                     <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class="u-mb-200">
-                          <div class="eventname-flag">
-                            <a class="eventname-flag--inner"
-                            data-tracking="click"
-                            data-product-list="from market_show via eventname_flag to event_index"
-                            href=
-                            "https://booth.pm/ja/events/v-market2">
-                            <div class="eventname-flag__name">
-                              Vケット2
-                            </div></a>
-                          </div>
-                        </div>
                         <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
@@ -276,24 +264,6 @@
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1211956/0cf724a9-c8dc-4414-8cfe-e00d47354567_base_resized.jpg">
                           </div>
                         </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="鬼面" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1211956/6c6edfcc-7ba8-4ca8-b21a-42c6a0330086_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="鬼面" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1211956/64699dc3-440e-40a5-b487-63f368af9e39_base_resized.jpg">
-                          </div>
-                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
@@ -308,14 +278,6 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1211956/0cf724a9-c8dc-4414-8cfe-e00d47354567_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1211956/6c6edfcc-7ba8-4ca8-b21a-42c6a0330086_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1211956/64699dc3-440e-40a5-b487-63f368af9e39_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -323,19 +285,22 @@
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
                             主にVRchatでの利用を想定した 鬼面4色の3Dモデルとなります。
-                            【ポリゴン数】 ･1002 【ファイル内容】 ･FBX
-                            ･unitypackage ･テクスチャ画像 ･改変用psdファイル
+                            【ポリゴン数】 ･1002 【使用Shader】
+                            ユニティちゃんトゥーンシェーダー Ver.2.0.7
+                            https://unity-chan.com/download/releaseNote.php?id=UTS2_0
+                            【ファイル内容】 ･unitypackage ･改変用psdファイル
                             ※同梱モデルにはUnlit/TextureのShaderを使用しています。
                             CubedParadoxs/Flat Lit Toonを利用される場合は
                             Cubeds-Unity-Shadersを導入して選択してください。
                             【Cubeds-Unity-Shadersの導入方法】
                             http://vrchatjp.playing.wiki/d/Cubeds-Unity-Shaders
-                            【利用にあたって】 〇VRchatへのアップロード､
-                            アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。
-                            〇商用利用はデータそのものを販売しない場合は可能です。
-                            〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる
-                            　状態での利用は改変の有無問わず禁止です。
-                            ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。
+                            【利用にあたって】 〇VRchatへのアップロード
+                            〇アバターペデスタルへの利用 〇モデルを改変しての利用
+                            〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用
+                            ×購入者以外の方がデータを取得出来る状態での利用
+                            ×同梱されているデータそのものの販売 ×再配布(改変の有無問わず禁止)
+                            -更新履歴- 2019.2/2 販売開始 2020.2/10
+                            ShaderをUTS2に変更
                             -------------------------------------------------
                             質問･不具合などあればご一報ください。
                             【Twitter】https://twitter.com/Sdnsk
